# ohmygentool

./: .dockerignore  .gitignore  .gitpod.Dockerfile  CMakeLists.txt  Dockerfile  Dockerfile.local-dev  README.md  config-schema.json  dub.json  dub.selections.json
.github/workflows/: d.yml
examples/demo-output/: generated.d  readme.txt  recast.json
include/gentool/: abstract_generator.h  defines.h  options.h
scripts/: makeenv.d
source/: app.d  clangparser.cpp  clangparser.h  compiler.cpp  compiler.h  dlang_gen.cpp  dlang_gen.h  iohelpers.cpp  iohelpers.h  main.cpp  options.cpp  postedits.cpp  postedits.h  ppcallbacks.cpp  ppcallbacks.h  printprettyd.cpp
source/gentool/: options.d
tests/: helpers.py  runtests.py
tests/basic_cpp01/: __init__.py
tests/basic_cpp01/cpp/: CMakeLists.txt  basic.cpp  basic.h
tests/basic_cpp01/d/: basic.d
tests/basic_cpp02/: __init__.py  basic.json
tests/basic_cpp02/cpp/: basic.cpp  basic.h
tests/basic_cpp02/d/: basic.d
tests/namespace01/: __init__.py
tests/namespace01/cpp/: CMakeLists.txt  nstest.cpp  nstest.h
tests/namespace01/d/: nstest.d
tests/operators01/: __init__.py
tests/operators01/cpp/: CMakeLists.txt  optest.cpp  optest.h
tests/operators01/d/: optest.d
